# blottool

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
blottool/: __init__.py  cli.py  io.py  measure.py  models.py  version.py  visualize.py
example/: blottool_results.csv  fiji_results.csv  rois.csv  rois.xlsx  validate.py
paper/: paper.bib  paper.md
tests/: test_basic.py  test_cli.py  test_measure.py
